5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4365/executions/1577_579.log
== TEST (2019-04-15 23:43:48) 
-- CODE:
print(" A UFAM tem"2016-1909,"anos de fundacao")
-- ERROR:
File "XXXX", line 1
    print(" A UFAM tem"2016-1909,"anos de fundacao")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:43:52) 
-- CODE:
print(" A UFAM tem"2016-1909,"anos de fundacao")
-- EXECUTION TIME:
0.15749
-- ERROR:
  File "/home/codebench/codes/1577/579/main.py", line 1
    print(" A UFAM tem"2016-1909,"anos de fundacao")
                          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:44:28) 
-- CODE:
print("A UFAM tem",2016-1909,"anos de fundacao")
-- OUTPUT:
A UFAM tem 107 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:44:36) 
-- CODE:
print("A UFAM tem",2016-1909,"anos de fundacao")
-- EXECUTION TIME:
0.218668
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:44:45) 
-- CODE:
print("A UFAM tem",2016-1909,"anos de fundacao")
-- OUTPUT:
A UFAM tem 107 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:44:54) 
-- CODE:
print("A UFAM tem",2016-1909,"anos de fundacao")
-- EXECUTION TIME:
0.160868
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:45:25) 
-- CODE:
print("A UFAM tem",2016-1909,"anos de fundacao.")
-- OUTPUT:
A UFAM tem 107 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:45:31) 
-- CODE:
print("A UFAM tem",2016-1909,"anos de fundacao.")
-- EXECUTION TIME:
0.213501
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
